Update automessage-core/src/main/java/com/github/imdmk/automessage/scheduled/ScheduledMessageConfig.java
Co-authored-by: gemini-code-assist[bot] <176961590+gemini-code-assist[bot]@users.noreply.github.com>